tests/baselines/reference/interfacedeclWithPredicatesError2.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError2.ts(1,11): error TS95003: The field test is used in a predicate but not described in the interface
tests/cases/compiler/interfacedeclWithPredicatesError2.ts(1,11): error TS95007: types is an unknown predicate operation, expected the following predicate(s): type


==== tests/cases/compiler/interfacedeclWithPredicatesError2.ts (2 errors) ====
    interface UsersShow{
              ~~~~~~~~~
!!! error TS95003: The field test is used in a predicate but not described in the interface
              ~~~~~~~~~
!!! error TS95007: types is an unknown predicate operation, expected the following predicate(s): type
        user_id?: number;
        screen_name?: string;
        text: string;
    } with {
        types(test) == string;
    }